--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,10 @@ span{
     color:rgb(44, 185, 196);
    
    
-    font-size: 1.1em;
+    font-size: 1.2em;
     align-items: baseline;
+    font-weight: 700;
+    letter-spacing: .05em;
 }
 footer{
     font-size: 1.3rem;
@@ -66,17 +68,29 @@ footer{
   display: inline-block;
   transition: all 0.3s linear;
   cursor: pointer;
+  margin-top:.3em;
 }
 
 .btn-primary {
   background: var(--primaryColor);
   color: black;
-  border: 2px solid #53C4CC;;
+  border: 2px solid #53C4CC;
+  font-weight: 600;
 }
 .btn-primary:hover {
   background: #53C4CC;;
   color: white;
 }
 h4{
+    font-family: 'Lato', sans-serif;
     font-size: 1rem;
+    font-weight: 400;
+    line-height: 2em;
+}
+h2{
+    text-align: center;
+    line-height: .7rem;
+    font-family: 'Lato', sans-serif;
+    font-weight: 200;
+    
 }
