--- a/styles.css
+++ b/styles.css
@@ -1,61 +1,57 @@
-body{
-    font-family: 'Lato', sans-serif;
-    min-height: 100vh;
+body {
+  font-family: "Lato", sans-serif;
+  min-height: 100vh;
 }
-header{
-    padding-top:2em;
-    margin:auto;
-    text-align: center;
-    
-   
+header {
+  padding-top: 2em;
+  margin: auto;
+  text-align: center;
 }
-.svg{
-    margin:auto;
-    width:90%;
-    
+.svg {
+  margin: auto;
+  width: 90%;
 }
-a{
-    color:#53C4CC;
-    text-decoration: none;
+a {
+  color: #53c4cc;
+  text-decoration: none;
 }
-a :hover{
-    color:orange;
+a :hover {
+  color: orange;
 }
-.ad{
-    display: block;
-    text-align: center;
-    color:#53C4CC;
-    color:black;
-    margin: auto;
+.ad {
+  display: block;
+  text-align: center;
+  color: #53c4cc;
+  color: black;
+  margin: auto;
 }
-h2{
-    color:rgb(44, 185, 196);
-    color:black;
+h2 {
+  color: rgb(44, 185, 196);
+  color: black;
 }
-button{
-    margin-top:.1em;
-    margin-bottom:2em;
-   
-    font-size: 1.5rem;
-    background-color: rgb(57, 229, 241);
-    border-radius: 4%;
-    box-shadow: .01em .1em .2em rgba(82, 158, 163, 0.534);
+button {
+  
+  margin-bottom:1.7em;
 
-    text-transform: uppercase;
-    padding: .5em .7em;
+  font-size: 1.5rem;
+  background-color: rgb(57, 229, 241);
+  border-radius: 4%;
+  box-shadow: 0.01em 0.1em 0.2em rgba(82, 158, 163, 0.534);
+
+  text-transform: uppercase;
+  padding: 0.5em 0.7em;
 }
-span{
-    color:rgb(44, 185, 196);
-   
-   
-    font-size: 1.2em;
-    align-items: baseline;
-    font-weight: 700;
-    letter-spacing: .05em;
+span {
+  color: rgb(44, 185, 196);
+
+  font-size: 1.2em;
+  align-items: baseline;
+  font-weight: 700;
+  letter-spacing: 0.05em;
 }
-footer{
-    font-size: 1.3rem;
-    text-align: center;
+footer {
+  font-size: 1.3rem;
+  text-align: center;
 }
 
 .btn-primary {
@@ -63,34 +59,33 @@ footer{
   text-decoration: none;
   letter-spacing: var(--mainSpacing);
   color: black;
-  border: 2px solid #53C4CC;;
+  border: 2px solid #53c4cc;
   padding: 0.9rem 1.6rem;
   display: inline-block;
   transition: all 0.3s linear;
   cursor: pointer;
-  margin-top:.3em;
+  margin-top: 0.3em;
 }
 
 .btn-primary {
   background: var(--primaryColor);
   color: black;
-  border: 2px solid #53C4CC;
+  border: 2px solid #53c4cc;
   font-weight: 600;
 }
 .btn-primary:hover {
-  background: #53C4CC;;
+  background: #53c4cc;
   color: white;
 }
-h4{
-    font-family: 'Lato', sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 2em;
+h4 {
+  font-family: "Lato", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 2em;
 }
-h2{
-    text-align: center;
-    line-height: .7rem;
-    font-family: 'Lato', sans-serif;
-    font-weight: 200;
-    
+h2 {
+  text-align: center;
+  line-height: 0.7rem;
+  font-family: "Lato", sans-serif;
+  font-weight: 200;
 }
