--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ footer {
   transition: all 0.3s linear;
   cursor: pointer;
   margin-top: 0.3em;
+  margin-bottom:3em;
 }
 
 .btn-primary {
@@ -85,11 +86,18 @@ h4 {
   font-family: "Lato", sans-serif;
   font-size: 1rem;
   font-weight: 400;
-  line-height: 2em;
+  line-height: 1.9em;
+  padding:0;
+  margin:0;
 }
 h2 {
   text-align: center;
   line-height: 0.7rem;
   font-family: "Lato", sans-serif;
   font-weight: 200;
+}
+#flyer{
+  margin-top:0;
+  color:black;
+  text-decoration: underline;
 }
