--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,25 @@
 body {
   font-family: "Lato", sans-serif;
-  min-height: 100vh;
+}
+.container {
+  display: grid;
+  max-height: 100vh;
+  text-align: center;
+  grid-template-areas:
+    "header"
+    "tag"
+    "button"
+    "footer";
 }
 header {
-  padding-top: .5em;
+  grid-area: header;
   margin: auto;
   text-align: center;
+  margin-top: 1.5em;
 }
 .svg {
   margin: auto;
-  width: 90%;
+  width: 200px;
 }
 a {
   color: #53c4cc;
@@ -19,39 +29,54 @@ a :hover {
   color: teal;
 }
 .ad {
+  grid-area: tag;
   display: block;
   text-align: center;
   color: #53c4cc;
   color: black;
   margin: auto;
+  margin-top: 7em;
+  font-family: "Lato", sans-serif;
+  font-size: 0.85rem;
+  font-weight: 700;
 }
 h2 {
-  color: rgb(44, 185, 196);
   color: black;
 }
 button {
-  
-  margin-bottom:1.7em;
+  margin-bottom: 1.7em;
 
   font-size: 1.5rem;
-  background-color: rgb(57, 229, 241);
+
   border-radius: 4%;
   box-shadow: 0.01em 0.1em 0.2em rgba(82, 158, 163, 0.534);
 
   text-transform: uppercase;
+
   padding: 0.5em 0.7em;
 }
 span {
   color: rgb(44, 185, 196);
-
+  line-height: 0.1em;
   font-size: 1.2em;
-  align-items: baseline;
-  font-weight: 700;
-  letter-spacing: 0.05em;
+  font-weight: 800;
 }
 footer {
-  font-size: 1.3rem;
+  grid-area: footer;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-gap: 0.7rem;
   text-align: center;
+  font-weight: 100;
+  font-size: 0.7rem;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+  width: 200px;
+  margin: auto;
+  margin-top:7em;
+}
+footer span {
+  font-size: 1.5em;
 }
 
 .btn-primary {
@@ -59,13 +84,12 @@ footer {
   text-decoration: none;
   letter-spacing: var(--mainSpacing);
   color: black;
-  border: 2px solid #53c4cc;
+  border: 1px solid #53c4cc;
   padding: 0.9rem 1.6rem;
   display: inline-block;
   transition: all 0.3s linear;
   cursor: pointer;
-  margin-top: 0.3em;
-  margin-bottom:2em;
+  text-align: center;
 }
 
 .btn-primary {
@@ -73,22 +97,18 @@ footer {
   color: black;
   border: 2px solid #53c4cc;
   font-weight: 600;
-  background: #53c4cc;
-  color: white;
 }
 .btn-primary:hover {
   background: #53c4cc;
   color: white;
-  background: transparent;
-  color: black;
 }
 h4 {
   font-family: "Lato", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.9em;
-  padding:0;
-  margin:0;
+  padding: 0;
+  margin: 0;
 }
 h2 {
   text-align: center;
@@ -96,8 +116,23 @@ h2 {
   font-family: "Lato", sans-serif;
   font-weight: 200;
 }
-#flyer{
-  margin-top:0;
-  color:black;
-  text-decoration: underline;
+#flyer {
+  margin-top: 0;
+  color: black;
+  /* border-bottom:1px solid black; */
+
+  letter-spacing: 0.1em;
+  padding: 0.3em;
+}
+section {
+  grid-area: button;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  text-align: center;
+  grid-gap: 0;
+}
+.footlinks {
+  padding-top: 0.7em;
+  width: 200px;
+  margin: auto;
 }
